# Synth_Dexed

./: ._layout.json  .gitignore  CMakeLists.txt  README.md  config.h  gen_includes.sh  includes.txt  keywords.txt  platformio.ini  synth_dexed.cpp  synth_dexed.h  synth_dexed.ino  teensy_board_detection.h
.github/: copilot-instructions.md
.github/workflows/: build-examples.yml  build.yml  firmware.yml  juce.yml  sync.yml  teensy.yml  wheels.yml
AudioPlugin/: CMakeLists.txt  README.md
AudioPlugin/Data/: VCED.json  dx7_voices.json  general_midi.json
AudioPlugin/Images/: LICENSE
AudioPlugin/Source/: CMakeLists.txt  EnvelopeDisplay.cpp  EnvelopeDisplay.h  FMRackController.cpp  FMRackController.h  FileBrowserDialog.cpp  FileBrowserDialog.h  KeyboardScalingDisplay.cpp  KeyboardScalingDisplay.h  Main.cpp  OperatorSliderLookAndFeel.cpp  OperatorSliderLookAndFeel.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RackAccordionComponent.cpp  RackAccordionComponent.h  VoiceBrowserComponent.cpp  VoiceBrowserComponent.h  VoiceEditorPanel.cpp  VoiceEditorPanel.h  VoiceEditorWindow.cpp  VoiceEditorWindow.h
examples/: synth_dexed.ino
examples/Banks/: Banks.ino  banks.h
examples/DexedFilter/: DexedFilter.ino
examples/SimpleDexed/: SimpleDexed.ino
examples/SimplePlay/: SimplePlay.ino
examples/SimplePlayAndEngineChange/: SimplePlayAndEngineChange.ino
examples/VolumeChange/: VolumeChange.ino
firmware/overlay/etc/uci-defaults/: 99-custom
orig_code/: EngineMkI.cpp  EngineMkI.h  EngineOpl.cpp  EngineOpl.h  PluginFx.cpp  PluginFx.h  aligned_buf.h  controllers.h  dexed.cpp  dexed.h  dx7note.cpp  dx7note.h  env.cpp  env.h  exp2.cpp  fm_core.cpp  fm_core.h  fm_op_kernel.cpp  fm_op_kernel.h  freqlut.cpp  freqlut.h  lfo.cpp  module.h  pitchenv.cpp  pitchenv.h  porta.cpp  porta.h  sin.cpp  source_microdexed.h  synth.h
python/: __init__.py  main_python.py  pyproject.toml  requirements.txt  setup.py  test_dexed.py
src/: ._layout.json  .dexed.cpp.swp  .synth_dexed.cpp.swp  :q  EngineMkI.cpp  EngineMkI.h  EngineMsfa.cpp  EngineMsfa.h  EngineOpl.cpp  EngineOpl.h  PluginFx.cpp  PluginFx.h  aligned_buf.h  compressor.h  controllers.h  dexed.cpp  dexed.h  dexed_pybind.cpp  dx7note.cpp  dx7note.h  env.cpp  env.h  exp2.cpp  exp2.h  fm_core.cpp  fm_core.h  fm_op_kernel.cpp  freqlut.cpp  freqlut.h  fx.cpp  fx.h  int_math.h  lfo.cpp  main.cpp  main_common.cpp  main_common.h  main_linux.cpp  main_linux.h  main_mac.cpp  main_mac.h  (+12 more)
src/FMRack/: ARCHITECTURE.md  AudioEffectPlateReverb.cpp  AudioEffectPlateReverb.h  CMakeLists.txt  Debug.h  FMEngine.cpp  FMEngine.h  FileRenderer.cpp  FileRenderer.h  Module.cpp  Module.h  Performance.cpp  Performance.h  README.md  Rack.cpp  Rack.h  Reverb.cpp  Reverb.h  UdpServer.cpp  UdpServer.h  VoiceData.cpp  VoiceData.h  main.cpp  test_buffers.cpp
src/FMRack/tests/: tests.py
src/native/: ._layout.json  CMakeLists.txt  StereoDexed.cpp  StereoDexed.h  main.cpp  main.py  main_common.cpp  main_common.h  main_linux.cpp  main_linux.h  main_mac.cpp  main_mac.h  main_win.cpp  main_win.h  midi_socket_server.cpp  midi_socket_server.h  performance_loader.cpp  performance_loader.h  synth_dexed_c_api.cpp  synth_dexed_c_api.h  test_socket.py
src/native/vst3/: CMakeLists.txt  dexed_vst3.cpp
tools/: .sysex2c.py.swp  create_log_lut.py  sysex2c.py
