[build-system]
requires = ["setuptools>=61.0", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "dexed_py"
version = "0.1.0"
description = "Python bindings for Synth_Dexed"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "sounddevice",
    "mido",
    "python-rtmidi"
]

[tool.cibuildwheel]
# Add cibuildwheel-specific options here if needed

# https://gcore.de/en/help/linux/centos7-new-repo-url-after-eol.php
[tool.cibuildwheel.linux]
before-build = '''
if [ -e /etc/redhat-release ] && grep -q 'CentOS Linux release 7' /etc/redhat-release; then \
  sed -i 's|mirrorlist=|#mirrorlist=|g' /etc/yum.repos.d/CentOS-*.repo && \
  sed -i 's|#baseurl=|baseurl=|g' /etc/yum.repos.d/CentOS-*.repo && \
  sed -i 's|http://mirror.centos.org|https://vault.centos.org|g' /etc/yum.repos.d/CentOS-*.repo && \
  yum clean all && yum makecache && yum install -y alsa-lib-devel; \
fi; \
if [ -e /etc/alpine-release ]; then apk add --no-cache alsa-lib-dev; fi; \
if command -v apt-get >/dev/null; then apt-get update && apt-get install -y libasound2-dev; fi
'''