[build-system]
requires = ["setuptools>=61.0", "wheel", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "dexed_py"
version = "0.1.0"
description = "Python bindings for Synth_Dexed"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "sounddevice",
    "mido",
    "python-rtmidi"
]

[tool.cibuildwheel]
# Add cibuildwheel-specific options here if needed

# https://gcore.de/en/help/linux/centos7-new-repo-url-after-eol.php
[tool.cibuildwheel.linux]
before-build = '''
cat /etc/os-release || true; \
if grep -r 'CentOS Linux release 7' /etc/*-release; then \
sed -i 's/mirrorlist/#mirrorlist/g' /etc/yum.repos.d/CentOS-* && \
sed -i 's|#baseurl=http://mirror.centos.org|baseurl=http://vault.centos.org|' /etc/yum.repos.d/CentOS-*; \
fi; \
if [ -e /etc/alpine-release ]; then apk add --no-cache alsa-lib-dev; fi; \
if command -v apt-get >/dev/null; then apt-get update && apt-get install -y libasound2-dev; fi
'''